# tiago_master

./: CMakeLists.txt  README.md  package.xml
config/: pick_and_place_params.yaml
launch/: pick_demo.launch  pick_simulation.launch
scripts/: call_clear_costmaps_service.sh  call_localization_service.sh  call_ros_service.py  pick_and_place_server.py  pick_client.py  publisher.py  run_gui.sh  run_simulation.py
